1.0b10
------
* Fix a missing __future__ import in embedart on Python 2.5.
* Fix ID3 and MPEG-4 tag names for the album-artist field.
* Fix Unicode encoding of album artist, album type, and label.

1.0b9
-----
* Queries can now contain whitespace. Spaces passed as shell
  arguments are now preserved, so you can use your shell's escaping
  syntax to include spaces in queries. For example, typing this:
    beet ls "the knife"
  or this:
    beet ls the\ knife
  now matches the entire phrase. To match in specified fields, use
  a construction like this:
    beet ls "artist:the knife"
* Queries can match items from the library by directory. A 'path:'
  prefix is optional; any query containing a path separator (/ on
  POSIX systems) is assumed to be a path query. Running
  "beet ls path/to/music" will show all the music in your library
  under the specified directory.
* Album art is now automatically discovered and copied from the
  imported directories when available.
* When choosing the "as-is" import album (or doing a non-autotagged
  import), every album either has an "album artist" set or is
  marked as a compilation (Various Artists). The choice is made
  based on the homogeneity of the tracks' artists. This prevents
  compilations that are imported as-is from being scattered across
  many directories after they are imported.
* The release label for albums and tracks is now fetched from
  MusicBrainz, written to files, and stored in the database.
* Release year and label are now shown in the candidate selection
  list to help disambiguate different releases of the same album.
* Prompts in the importer interface are now colorized for easy
  reading. The default option is always highlighted.
* The "list" command now accepts a "-p" switch that causes it to show
  paths instead of titles. This makes the output of "beet ls -p"
  suitable for piping into another command such as xargs.
* The importer now provides the option to specify a MusicBrainz ID